examples/bad/static_error_function_not_defined.ps
int f() {
    println("hello!");
    return 0;
}

f2();